fixed in text editor, link dialog not visible

--- a/packages/silex-lib/src/css/main.less
+++ b/packages/silex-lib/src/css/main.less
@@ -75,7 +75,7 @@ body {
 }
 
 .modal-dialog {
-  z-index: 120;
+  z-index: 220;
 }
 label {
   vertical-align: top;
